packages/build/tests/error/fixtures/ipc/plugin.js
const { exit } = require('process')

module.exports = {
  onPreBuild() {
    exit()
  },
  onBuild() {},
}
